--- a/gestionweb/public/index.html
+++ b/gestionweb/public/index.html
@@ -22,6 +22,11 @@
     
     <title>React App</title>
   </head>
+  <nav>
+    <ul>
+      <li></li>
+    </ul>
+  </nav>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
